<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:ads="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:orientation="vertical">

    <include android:id="@+id/toolbar" layout="@layout/toolbar" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:layout_marginRight="@dimen/activity_horizontal_margin"
        android:layout_marginBottom="@dimen/activity_vertical_margin"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:orientation="vertical"
        android:layout_weight="1">


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:text="@string/location_not_actived"
            android:id="@+id/tvAtivarLocalizacao" />

        <ToggleButton
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/btnGps"
            android:background="@color/red_500"
            android:textColor="@android:color/white"
            android:layout_gravity="center_horizontal"
            android:textOn="@string/turn_off"
            android:textOff="@string/turn_on"
            android:layout_marginTop="8dp"
            android:checked="false" />

        <TextView
            android:id="@+id/tvCurrentPosition"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="16dp"
            android:gravity="center_horizontal"
            android:text="@string/current_position"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium" />

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:textAppearance="@style/TextAppearance.AppCompat.Small"
                    android:text="@string/latitude"
                    android:id="@+id/tvLatitudeLabel"
                    android:layout_marginTop="16dp"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentTop="true"
                    android:textStyle="bold"
                    />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="@style/TextAppearance.AppCompat.Small"
                    android:text="0,0"
                    android:id="@+id/tvLatitude"
                    android:layout_alignTop="@+id/tvLatitudeLabel"
                    android:layout_toRightOf="@+id/tvLatitudeLabel"
                    android:layout_toEndOf="@+id/tvLatitudeLabel"
                    />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="@style/TextAppearance.AppCompat.Small"
                    android:text="@string/longitude"
                    android:id="@+id/tvLongitudeLabel"
                    android:layout_marginTop="4dp"
                    android:layout_below="@+id/tvLatitudeLabel"
                    android:textStyle="bold"
                    />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="@style/TextAppearance.AppCompat.Small"
                    android:text="0,0"
                    android:id="@+id/tvLongitude"
                    android:layout_alignTop="@+id/tvLongitudeLabel"
                    android:layout_toRightOf="@+id/tvLatitudeLabel"
                    android:layout_toEndOf="@+id/tvLatitudeLabel"
                    />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="@style/TextAppearance.AppCompat.Small"
                    android:text="@string/accuracy"
                    android:id="@+id/tvAccuracyLabel"
                    android:layout_marginTop="4dp"
                    android:layout_below="@+id/tvLongitudeLabel"
                    android:textStyle="bold"
                    />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="@style/TextAppearance.AppCompat.Small"
                    android:text="0,0 m"
                    android:id="@+id/tvAccuracy"
                    android:layout_alignTop="@+id/tvAccuracyLabel"
                    android:layout_alignLeft="@+id/tvLongitude"
                    android:layout_alignStart="@+id/tvLongitude"
                    />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="@style/TextAppearance.AppCompat.Small"
                    android:text="@string/altitude"
                    android:id="@+id/tvAltitudeLabel"
                    android:layout_marginTop="4dp"
                    android:layout_below="@+id/tvAccuracyLabel"
                    android:textStyle="bold"
                    />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="@style/TextAppearance.AppCompat.Small"
                    android:text="0,0"
                    android:id="@+id/tvAltitude"
                    android:layout_alignTop="@+id/tvAltitudeLabel"
                    android:layout_alignLeft="@+id/tvAccuracy"
                    android:layout_alignStart="@+id/tvAccuracy"
                    />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="@style/TextAppearance.AppCompat.Small"
                    android:text="@string/speed"
                    android:id="@+id/tvSpeedLabel"
                    android:layout_marginTop="4dp"
                    android:layout_below="@+id/tvAltitudeLabel"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true"
                    android:textStyle="bold"
                    />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="@style/TextAppearance.AppCompat.Small"
                    android:text="0 m/s"
                    android:id="@+id/tvSpeed"
                    android:layout_alignTop="@+id/tvSpeedLabel"
                    android:layout_alignLeft="@+id/tvAltitude"
                    android:layout_alignStart="@+id/tvAltitude"
                    />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="@style/TextAppearance.AppCompat.Small"
                    android:text="@string/bearing"
                    android:id="@+id/tvBearingLabel"
                    android:textStyle="bold"
                    android:layout_below="@+id/tvSpeedLabel"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true"
                    android:layout_marginTop="4dp"
                    />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="@style/TextAppearance.AppCompat.Small"
                    android:text="0"
                    android:id="@+id/tvBearing"
                    android:layout_alignTop="@+id/tvBearingLabel"
                    android:layout_alignLeft="@+id/tvSpeed"
                    android:layout_alignStart="@+id/tvSpeed"
                    />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="@style/TextAppearance.AppCompat.Small"
                    android:text="@string/update_at"
                    android:id="@+id/tvUpdateAtLabel"
                    android:textStyle="bold"
                    android:layout_marginTop="4dp"
                    android:layout_below="@+id/tvBearingLabel"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="@style/TextAppearance.AppCompat.Small"
                    android:text="@string/never"
                    android:id="@+id/tvUpdateAt"
                    android:layout_alignTop="@+id/tvUpdateAtLabel"
                    android:layout_toRightOf="@+id/tvLatitudeLabel"
                    android:layout_toEndOf="@+id/tvLatitudeLabel" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textAppearance="@style/TextAppearance.AppCompat.Small"
                    android:id="@+id/tvAddress"
                    android:layout_below="@+id/tvUpdateAtLabel"
                    android:layout_marginTop="8dp"
                    android:layout_alignParentRight="true"
                    android:layout_alignParentEnd="true"
                    />
            </RelativeLayout>
        </ScrollView>

        <Button
            style="?android:attr/buttonStyleSmall"
            android:layout_width="match_parent"
            android:drawableTop="@android:drawable/ic_dialog_map"
            android:layout_height="wrap_content"
            android:text="@string/follow_on_map"
            android:id="@+id/btnFollow"
            android:layout_gravity="center_horizontal"
            android:background="@color/blue_500"
            android:textColor="@android:color/white"
            android:layout_marginTop="16dp" />
    </LinearLayout>

    <com.google.android.gms.ads.AdView
        android:id="@+id/adView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        ads:adSize="BANNER"
        ads:adUnitId="@string/banner_ad_unit_id">
    </com.google.android.gms.ads.AdView>

</LinearLayout>
